--- a/Lab 1 - rozgrzewka/index.html
+++ b/Lab 1 - rozgrzewka/index.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rozgrzewka</title>
 </head>
-<input type="text" id="liczba1">
-<input type="text" id="liczba2">
-<button id="przelicz">Przelicz</button>
-<div id="wyniki"></div>
-<script src="main.js" type="text/javascript"></script>
-<script type="text/javascript">
-// console.log()
-</script>
 <body>
-    
+    <div class="content">
+        <div class="input">
+            <input type="text" id="liczba1">
+            <input type="text" id="liczba2">
+            <input type="text" id="liczba3">
+            <input type="text" id="liczba4">
+            <button id="przelicz">Przelicz</button>
+        </div>
+        <div class="output">
+            <div id="suma">Suma: </div>
+            <div id="srednia">Średnia: </div>
+            <div id="min">Min: </div>
+            <div id="max">Max: </div>
+        </div>
+        <script src="main.js" type="text/javascript"></script>
+        <script type="text/javascript"></script>
+    </div>
 </body>
 </html>
