--- a/Lab 3 - drumkit/index.html
+++ b/Lab 3 - drumkit/index.html
@@ -3,18 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DrumKit</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio src="./sounds/clap.wav" controls id="s1"></audio>
-    <audio src="./sounds/hihat.wav" controls id="s2"></audio>
-    <audio src="./sounds/boom.wav" controls id="s3"></audio>
-    <audio src="./sounds/kick.wav" controls id="s4"></audio>
-    <audio src="./sounds/openhat.wav" controls id="s5"></audio>
-    <audio src="./sounds/ride.wav" controls id="s6"></audio>
-    <audio src="./sounds/snare.wav" controls id="s7"></audio>
-    <audio src="./sounds/tink.wav" controls id="s8"></audio>
-    <audio src="./sounds/tom.wav" controls id="s9"></audio>
+    <div id="infoBlock">
+        <p>Press a key to play sound:</p>
+        <pre>
+            "b" - boom
+            "c" - clap
+            "h" - hihat
+            "k" - kick
+            "o" - openhat
+            "r" - ride
+            "s" - snare
+            "t" - tink
+            "x" - tom</pre>
+        <p id="message"></p>
+    </div>
+    <div id="soundBlock">
+        <audio src="./sounds/boom.wav" controls id="boom"></audio>
+        <audio src="./sounds/clap.wav" controls id="clap"></audio>
+        <audio src="./sounds/hihat.wav" controls id="hihat"></audio>
+        <audio src="./sounds/kick.wav" controls id="kick"></audio>
+        <audio src="./sounds/openhat.wav" controls id="openhat"></audio>
+        <audio src="./sounds/ride.wav" controls id="ride"></audio>
+        <audio src="./sounds/snare.wav" controls id="snare"></audio>
+        <audio src="./sounds/tink.wav" controls id="tink"></audio>
+        <audio src="./sounds/tom.wav" controls id="tom"></audio>
     <script src="drumkit.js"></script>
+    </div>
 </body> 
 </html>
