--- a/Lab 6 - ball in the hole/index.html
+++ b/Lab 6 - ball in the hole/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Ball in the hole</title>
 </head>
 <body>
-    <script src="index.js"></script>
-</body>
+  <div id="timer"></div>
+    <div id="board">
+      <div id="ball"></div>
+      <div id="hole"></div>
+    </div>
+    <div id="scoreboard"></div>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
