--- a/Lab 3 - drumkit/index.html
+++ b/Lab 3 - drumkit/index.html
@@ -19,6 +19,32 @@
             "s" - snare
             "t" - tink
             "x" - tom</pre>
+        
+        <div class="controls">
+            <div>
+                <button class="recordBtn lighten">record</button>
+                <button class="playBtn">play</button>
+            </div>
+            <div>
+                <button class="recordBtn lighten">record</button>
+                <button class="playBtn">play</button>
+            </div>
+            <div>
+                <button class="recordBtn lighten">record</button>
+                <button class="playBtn">play</button>
+            </div>
+            <div>
+                <button class="recordBtn lighten">record</button>
+                <button class="playBtn">play</button>
+            </div><br>
+        </div>
+        <div class="controls row">
+            <button id="playAll">Play All</button>
+            <div class="recLength">
+                <input type="range" id="recordLenght" min="0" max="30" value="7"/>
+                <label id="recordLenghtLabel" for="recordLenght">Recording time: 7 seconds</label>
+            </div>
+        </div>
         <p id="message"></p>
     </div>
     <div id="soundBlock">
